2012-05-21  Kinuko Yasuda  <kinuko@chromium.org>

        Cleanup: add a file system call which captures the file metadata at once.
        https://bugs.webkit.org/show_bug.cgi?id=86995

        Reviewed by David Levin.

        * Platform.gypi: Added an entry for WebFileInfo.h.
        * chromium/public/WebFileInfo.h: Renamed from Source/WebKit/chromium/public/WebFileInfo.h.
        (WebKit::WebFileInfo::WebFileInfo):
        * chromium/public/WebFileUtilities.h:
        (WebKit):
        (WebKit::WebFileUtilities::getFileInfo): Added.

2012-05-24  Antoine Labour  <piman@chromium.org>

        [chromium] Add a setForceRenderSurface to WebLayer for test/bench purpose
        https://bugs.webkit.org/show_bug.cgi?id=87436

        Reviewed by James Robinson.

        * chromium/public/WebLayer.h:
        (WebLayer):

2012-05-24  Mark Pilgrim  <pilgrim@chromium.org>

        [Chromium] Move queryLocalizedString to Platform.h
        https://bugs.webkit.org/show_bug.cgi?id=85762

        Reviewed by Adam Barth.

        Part of a refactoring series. See tracking bug 82948.

        * Platform.gypi:
        * chromium/public/Platform.h:
        (WebKit):
        (Platform):
        (WebKit::Platform::queryLocalizedString):
        * chromium/public/WebLocalizedString.h: Added.
        (WebKit):

2012-05-23  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r118218.
        http://trac.webkit.org/changeset/118218
        https://bugs.webkit.org/show_bug.cgi?id=87299

        breaks webkit win builder (Requested by pilgrim_google__ on
        #webkit).

        * Platform.gypi:
        * chromium/public/Platform.h:
        (WebKit):
        (Platform):
        * chromium/public/WebLocalizedString.h: Removed.

2012-05-23  Mark Pilgrim  <pilgrim@chromium.org>

        [Chromium] Move themeEngine to Platform.h
        https://bugs.webkit.org/show_bug.cgi?id=87268

        Reviewed by Adam Barth.
